[gd_scene load_steps=2 format=3 uid="uid://61lfukx5wbam"]

[ext_resource type="Script" path="res://ui/code_canvas/graph_edit.gd" id="1_a5ou8"]

[node name="GraphEdit" type="GraphEdit"]
size_flags_vertical = 3
script = ExtResource("1_a5ou8")

[connection signal="begin_node_move" from="." to="." method="_on_begin_node_move"]
[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="end_node_move" from="." to="." method="_on_end_node_move"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
